--- a/faq.html
+++ b/faq.html
@@ -18,7 +18,7 @@
         <li><a href ="about.html">About</a></li>
         <li><a href ="policy.html">Policy</a></li>
         <li class="active">FAQ</li>
-        <li><a href="#"><span class="icon">⚙</span></a></li>
+        <li><a href = "login.html">Login</a></li>
       </ul>
     </nav>
   </header>
