lms updated code

--- a/login.html
+++ b/login.html
@@ -27,6 +27,9 @@
                 <span class="toggle-password" id="togglePassword">👁️</span>
             </div>
             <button class="submit-btn">Login</button>
+            <p>Don't have an account? <a href="signup.html">
+                Sign Up/Register</a></p>
+            <div class="message" id="login-message"></div>
             
     </div>
 
