--- a/course.html
+++ b/course.html
@@ -14,10 +14,10 @@
         <div class="logo">ELearning</div>
         <ul>
             <li><a href ="index.html">Home</a> </li>
-            <li class="active">Courses</li>
+            <li><a href ="course.html">Course</a></li>
             <li><a href ="about.html">About</a></li>
             <li><a href ="policy.html">Policy</a></li>
-            <li><a href ="faq.html">faq</a></li>
+            <li><a href ="faq.html">Faq</a></li>
             <li><a href = "login.html">Login</a></li>
         </ul>
     </nav>
@@ -37,33 +37,79 @@
     <div class="courses-container">
         <!-- Card 1 -->
         <div class="course-card">
-            <img src="images.png/demo1.png" alt="Course Image">
-            <h3>HTML</h3>
+           <a href ="inside.html"> <img src="images.png/demo1.png" alt="Course Image" ></a>
+            <h3 >HTML</h3>
             <p>5 Students | 4 Lectures</p>
-            <p class="price">₹5 <span class="old-price">₹10</span></p>
+            <p class="price">₹400 <span class="old-price">₹800</span></p>
         </div>
         <!-- Card 2 -->
         <div class="course-card">
-            <img src="images.png/demo2.png" alt="Course Image">
+            <a href ="inside.html"> <img src="images.png/demo2.png" alt="Course Image"></a>
             <h3>CSS</h3>
             <p>2 Students | 3 Lectures</p>
-            <p class="price">₹10 <span class="old-price">₹99</span></p>
+            <p class="price">₹500 <span class="old-price">₹2000</span></p>
         </div>
         <!-- Card 3 -->
         <div class="course-card">
-            <img src="images.png/demo3.png" alt="Course Image">
+            <a href ="inside.html"> <img src="images.png/demo3.png" alt="Course Image"></a>
             <h3>React JS</h3>
             <p>1 Student | 3 Lectures</p>
-            <p class="price">₹100 <span class="old-price">₹78</span></p>
+            <p class="price">6000 <span class="old-price">₹10000</span></p>
         </div>
         <!-- Card 4 -->
         <div class="course-card">
-            <img src="images.png/demo4.png" alt="Course Image">
+            <a href ="inside.html"><img src="images.png/demo4.png" alt="Course Image"></a>
             <h3>Java</h3>
             <p>15 Students | 7 Lectures</p>
             <p class="price">₹3000 <span class="old-price">₹5000</span></p>
         </div>
+        
+        <!-- Card 5 -->
+        <div class="course-card">
+            <a href ="inside.html"><img src="images.png/demo5.png" alt="Course Image"></a>
+            <h3>DevOps</h3>
+            <p>12 Students | 3 Lectures</p>
+            <p class="price">₹3000 <span class="old-price">₹6000</span></p>
+        </div>
+    
+        <!-- Card 6 -->
+        <div class="course-card">
+            <a href ="inside.html"><img src="images.png/demo6.png" alt="Course Image"></a>
+            <h3>Data structures and Algorithims JS</h3>
+            <p>17 Students | 6 Lectures</p>
+            <p class="price">₹4000 <span class="old-price">₹8000</span></p>
+        </div>
     </div>
+    <!-- Footer -->
+<footer>
+    <div class="footer-container">
+        <div class="footer-column">
+            <h3>About</h3>
+            <p>Our Story</p>
+            <p>Privacy Policy</p>
+            <p>FAQ</p>
+        </div>
+        <div class="footer-column">
+            <h3>Quick Links</h3>
+            <p>Courses</p>
+            <p>My Account</p>
+            <p>Course Dashboard</p>
+        </div>
+        <div class="footer-column">
+            <h3>Social Links</h3>
+            <p>Youtube</p>
+            <p>Instagram</p>
+            <p>Github</p>
+        </div>
+        <div class="footer-column">
+            <h3>Contact Info</h3>
+            <p>Call Us: +91 - +91 90357 78342</p>
+            <p>Address: 112/4, 3rd floor, BMR Landmark, HSR Layout, Mangammanapalya Main Rd, 7th Sector, Bommanahalli, Bengaluru, Karnataka 560068</p>
+            <p>Mail Us: hello@techspira.co.in.com</p>
+        </div>
+    </div>
+    <p class="footer-bottom">Copyright © 2024 ELearning | All Rights Reserved</p>
+</footer>
 
     <!-- Link to JavaScript -->
     <script src="script.js"></script>
