--- a/faq.html
+++ b/faq.html
@@ -30,19 +30,19 @@
 
       <!-- FAQ Items -->
       <div class="faq-item">
-        <div class="question">test question 2 <span class="toggle-icon">+</span></div>
+        <div class="question">What is the difference between coding and programming? <span class="toggle-icon">+</span></div>
         <div class="answer">This is the answer for test question 2.</div>
       </div>
       <div class="faq-item">
-        <div class="question">test question 3 <span class="toggle-icon">+</span></div>
+        <div class="question">What are HTML and CSS? <span class="toggle-icon">+</span></div>
         <div class="answer">This is the answer for test question 3.</div>
       </div>
       <div class="faq-item">
-        <div class="question">test question 4 <span class="toggle-icon">+</span></div>
+        <div class="question">What's the difference between a designer and a developer? <span class="toggle-icon">+</span></div>
         <div class="answer">This is the answer for test question 4.</div>
       </div>
       <div class="faq-item">
-        <div class="question">test question 1 <span class="toggle-icon">+</span></div>
+        <div class="question">What computer program do people use to write code? <span class="toggle-icon">+</span></div>
         <div class="answer">This is the answer for test question 1.</div>
       </div>
     </section>
@@ -77,13 +77,14 @@
       </div>
       <div class="footer-column">
         <h3>Contact Info</h3>
-        <p>Call Us: +91 - 9373642448</p>
-        <p>Address: Pune, Maharashtra, Warje 411058</p>
+        <p>Call Us: +91 90357 78342</p>
+        <p>Address: 112/4, 3rd floor, BMR Landmark, HSR Layout, Mangammanapalya Main Rd, 7th Sector,</p>  
+        <P> Bommanahalli, Bengaluru, Karnataka 560068</P>
         <p>Mail Us: <a href="mailto:hello@elearning.com">hello@elearning.com</a></p>
       </div>
     </div>
     <div class="footer-bottom">
-      Copyright &copy; 2023 ELearning | All Rights Reserved
+      Copyright &copy; 2024 ELearning TechSpira| All Rights Reserved
     </div>
   </footer>
 
