--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="course.html">Courses</a></li>
                 <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="policy.html">Policy</a></li>
-                <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
-                <li class="nav-item"><a class="nav-link" href="#Login">Login</a></li>
+                <li class="nav-item"><a class="nav-link" href="faq.html">Faq</a></li>
+                <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
             </ul>
         </div>
     </div>
@@ -268,7 +268,7 @@
             <p>Mail Us: hello@techspira.co.in.com</p>
         </div>
     </div>
-    <p class="footer-bottom">Copyright © 2024 ELearning | All Rights Reserved</p>
+    <p class="footer-bottom">Copyright © 2024 ELearning TechSpira| All Rights Reserved</p>
 </footer>
 
 </body>
