--- a/policy.html
+++ b/policy.html
@@ -13,11 +13,11 @@
     <nav>
       <div class="logo">ELearning</div>
       <ul class="nav-links">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Courses</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="course.html">Courses</a></li>
         <li><a href ="about.html">About</a></li>
-        <li class="active">Policy</li>
-        <li><a href="#">FAQ</a></li>
+        <li><a href="policy.html">Policy</a></li>
+        <li><a href="faq.html">FAQ</a></li>
         <li><a href = "login.html">Login</a></li>
       </ul>
     </nav>
@@ -28,23 +28,63 @@
     <section class="terms">
       <h1>Platform Terms and Condition</h1>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facere blanditiis architecto quasi impedit in dicta nisi, asperiores voluptatum eos alias facilis assumenda ex beatae, culpa dignissimos accusantium quod numquam dolores! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facere blanditiis architecto quasi impedit in dicta nisi, asperiores voluptatum eos alias facilis assumenda ex beatae, culpa dignissimos accusantium quod numquam dolores!
+        1. Purpose
+This policy establishes the standards for the use, participation, and management of eLearning platforms and courses to ensure an effective, inclusive, and secure online learning environment.
       </p>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facere blanditiis architecto quasi impedit in dicta nisi, asperiores voluptatum eos alias facilis assumenda ex beatae, culpa dignissimos accusantium quod numquam dolores! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facere blanditiis architecto quasi impedit in dicta nisi, asperiores voluptatum eos alias facilis assumenda ex beatae, culpa dignissimos accusantium quod numquam dolores!
-      </p>
+        2. Scope
+        This policy applies to all learners, educators, administrators, and stakeholders engaged in eLearning activities through the institution's platform or any approved third-party tools.
+        
+              </p>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facere blanditiis architecto quasi impedit in dicta nisi, asperiores voluptatum eos alias facilis assumenda ex beatae, culpa dignissimos accusantium quod numquam dolores! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facere blanditiis architecto quasi impedit in dicta nisi, asperiores voluptatum eos alias facilis assumenda ex beatae, culpa dignissimos accusantium quod numquam dolores!
-      </p>
+        3. Definitions
+        eLearning: Education delivered through digital platforms, including video conferencing, learning management systems (LMS), and online resources.
+        LMS: A software application for managing, delivering, and tracking eLearning.
+        Users: Participants of eLearning, including learners, instructors, and support staff.      </p>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facere blanditiis architecto quasi impedit in dicta nisi, asperiores voluptatum eos alias facilis assumenda ex beatae, culpa dignissimos accusantium quod numquam dolores! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facere blanditiis architecto quasi impedit in dicta nisi, asperiores voluptatum eos alias facilis assumenda ex beatae, culpa dignissimos accusantium quod numquam dolores!
-      </p>
+        4. Guidelines
+        <P>4.1 Access and Use
+        Users must have authorized access to eLearning platforms. Sharing login credentials is strictly prohibited.
+        All users are expected to familiarize themselves with the eLearning platform's features and policies.</P>
+        <P>4.2 Code of Conduct
+        Respectful communication and behavior are mandatory in all interactions.
+        Cyberbullying, harassment, or any form of discrimination is not tolerated.
+        Plagiarism and academic dishonesty are prohibited and will be penalized.</P>
+        <P>4.3 Privacy and Security
+        Personal data must be protected as per applicable privacy laws (e.g., GDPR, HIPAA).
+        Users must report any suspicious activity or breaches to the designated administrator.</P>
+        <P>4.4 Technical Requirements
+        Learners and instructors are responsible for maintaining reliable internet access and compatible devices.
+        The institution will provide technical support and guidelines for troubleshooting common issues.</P>
+        <P>4.5 Attendance and Participation
+        Regular attendance and active participation in eLearning activities are mandatory unless otherwise specified.
+        Recorded sessions or supplementary materials are provided for missed classes, subject to approval.</P>
+        <P></P>4.6 Intellectual Property
+        All course materials, recorded lectures, and assessments are the intellectual property of the institution or content creators.
+        Unauthorized sharing or distribution of content is prohibited.</P>
+        <P>4.7 Feedback and Evaluation
+        Participants are encouraged to provide constructive feedback through periodic surveys or evaluations.
+        Instructors will assess learners based on predefined criteria and provide timely feedback.</P>
+              </p>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facere blanditiis architecto quasi impedit in dicta nisi, asperiores voluptatum eos alias facilis assumenda ex beatae, culpa dignissimos accusantium quod numquam dolores! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facere blanditiis architecto quasi impedit in dicta nisi, asperiores voluptatum eos alias facilis assumenda ex beatae, culpa dignissimos accusantium quod numquam dolores!
-      </p>
+        5. Roles and Responsibilities
+        <P>5.1 Learners
+        Complete all assigned tasks, assessments, and participation requirements.
+        Adhere to the eLearning policy and report issues promptly.</P>
+        <P>5.2 Instructors
+        Design and deliver inclusive, engaging, and accessible eLearning content.
+        Maintain professional behavior and respond to learner inquiries promptly.</P>
+        <P>5.3 Administrators
+        Manage and maintain eLearning platforms and resources.
+        Ensure compliance with security, privacy, and accessibility standards.  </P>    </p>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facere blanditiis architecto quasi impedit in dicta nisi, asperiores voluptatum eos alias facilis assumenda ex beatae, culpa dignissimos accusantium quod numquam dolores! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Facere blanditiis architecto quasi impedit in dicta nisi, asperiores voluptatum eos alias facilis assumenda ex beatae, culpa dignissimos accusantium quod numquam dolores!
-      </p>
+        6. Compliance and Enforcement
+        Violations of this policy may result in:
+        
+        Warning or counseling.
+        Temporary suspension from eLearning activities.
+        Permanent revocation of access, depending on the severity of the breach.
+              </p>
     </section>
   </main>
 
