--- a/about.html
+++ b/about.html
@@ -15,9 +15,9 @@
       <ul class="nav-links">
         <li><a href ="index.html">Home</a> </li>
         <li><a href="course.html">course</a></li>
-        <li class="active">About</li>
+        <li><a href ="about.html">About</a></li>
         <li><a href ="policy.html">Policy</a></li>
-        <li><a href ="faq.html">FAQ</a></li>
+        <li><a href ="faq.html">Faq</a></li>
         <li><a href = "login.html">Login</a></li>
     </ul>
     </nav>
